--- a/app/globals.css
+++ b/app/globals.css
@@ -63,5 +63,9 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .hoverEffect{
+    @apply duration-300 ease-in-out transition-all
+  }
 }
 
